--- a/docs/002-前端/022-调试技巧/001-移动端和pc端调试技巧.md
+++ b/docs/002-前端/022-调试技巧/001-移动端和pc端调试技巧.md
@@ -1,4 +1,5 @@
 ### 移动端
+- https://github.com/wqlyy/inspect-webapp
 ### 1. 使用 Chrome inspect 调试手机Webview页面
 手机webview和电脑上同步，像调试浏览器页面一样使用 devtools 调试手机页面
 1. 用USB线连接手机和电脑
@@ -33,3 +34,5 @@
 ### 9. etc + 代理
 - 使用代理，将网络代理到本机
 - 本机通过配置etc将域名指向本地服务，如果是https的话需要webpack开启https，端口设置为443，http为80。
+
+### 10. spy-debugger
