--- a/docs/006-网络协议/知识点汇总.md
+++ b/docs/006-网络协议/知识点汇总.md
@@ -9,6 +9,10 @@ Post 和 Get 是 HTTP 请求的两种方法，其区别如下：
 - **发送的报文格式：** Get 请求的报文中**实体部分为空**，Post 请求的报文中实体部分一般为向服务器发送的数据。
 - **安全性：** Get 请求可以将请求的参数放入 url 中向服务器发送，这样的做法相对于 Post 请求来说是不太安全的，因为**请求的 url 会被保留在历史记录中。**
 - **请求长度：** 浏览器由于对 url 长度的限制，所以会影响 get 请求发送数据时的长度。这个限制是浏览器规定的，并不是 RFC 规定的。
+  - get请求的参数一般在地址上，大小会有限制。
+    - URL如果是给浏览器使用，则长度是由浏览器决定的。
+    - 如果URL不直接提供给用户，而是提供给程序调用，这时的长度就只受Web服务器影响了。
+  - post请求的参数一般放在请求体上，大小限制是由服务器设定的（Tomcat默认2M）。
 - **参数类型：** post 的参数传递支持更多的数据类型。
 
 
