--- a/docs/002-前端/002-javascript/练习题/编程题.md
+++ b/docs/002-前端/002-javascript/练习题/编程题.md
@@ -95,3 +95,21 @@ sendRequest(urls, 2, res => {
 })
 
 ```
+
+# 如何计算滚动条的宽度？
+
+```javascript
+const scrollContainer = document.createElement('div');
+const scrollContent = document.createElement('div');
+
+scrollContainer.style = 'position:fixed;z-index:-1;width:50px;height:50px;overflow:scroll;';
+
+scrollContent.style = 'height:100px;';
+
+scrollContainer.append(scrollContent);
+document.body.append(scrollContainer);
+
+const scrollBarWidth = scrollContainer.offsetWidth - scrollContent.offsetWidth;
+```
+
+***如果是mac的话，scrollBarWidth计算出来的值永远是0，因为滚动条不占用可视区的空间***
