--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -1,3 +1,7 @@
+# 学习网站
+1. [google developers](https://developers.google.com/web/updates)
+2. [google developers](https://developers.google.com/web/fundamentals/performance/rendering/avoid-large-complex-layouts-and-layout-thrashing?utm_source=devtools#avoid-forced-synchronous-layouts)
+
 # css
 
 1. [bootstrap](https://www.bootcss.com/)
@@ -28,6 +32,8 @@
 2. talkingdata
 3. grwingio
 4. Sentry
+5. [开源库mitojs](https://github.com/mitojs/mitojs)
+5. [开源库dora](https://github.com/dora-projects/dora/tree/master/packages/browser/src)
 
 # 动画
 
@@ -75,6 +81,7 @@
 28. [制作简历](https://www.wondercv.com/jobs/graduation?identify=already_work)
 29. https://html.spec.whatwg.org/multipage/webappapis.html#event-loops
 30. [v8引擎](https://github.com/Dyanwen/books/blob/master/%E5%9B%BE%E8%A7%A3GoogleV8/01_%E4%BD%A0%E7%9F%A5%E9%81%93v8%E6%98%AF%E5%A6%82%E4%BD%95%E6%89%A7%E8%A1%8Cjs%E4%BB%A3%E7%A0%81%E7%9A%84%E5%90%97%EF%BC%9F.md)
+31. [学习线路](https://xie.infoq.cn/article/b674d5f0e32881b78a39aca35)
 
 
 # 面试
