--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -1,6 +1,7 @@
 # 学习网站
 1. [google developers](https://developers.google.com/web/updates)
 2. [google developers](https://developers.google.com/web/fundamentals/performance/rendering/avoid-large-complex-layouts-and-layout-thrashing?utm_source=devtools#avoid-forced-synchronous-layouts)
+3. [stackoverflow](https://stackoverflow.com/users/17157991/liuchengyuan)
 
 # css
 
