--- a/docs/003-blog/企业微信开发.md
+++ b/docs/003-blog/企业微信开发.md
@@ -5,7 +5,8 @@
 ## 创建应用
   - https://juejin.cn/post/6844904132122247182
 
-###  配置网页域名白名单
+###  配置SDk网页域名白名单
+- 需要将一个****.txt文件放到项目的根目录下，这就需要注册域名先部署项目，将txt文件传到服务器中去。
 
 ### 获取开发权限
 
