--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -95,6 +95,13 @@
 
 # 书籍
 - WebKit技术内幕
+- javascript权威指南
+- 你不知道的javascript
+- javascript语言精粹
+- Css新世界
+- 学习javasxript数据结构与算法
+- css权威指南
+- css揭秘
 
 # canvas
 
