--- a/docs/002-前端/002-javascript/练习题/编程题.md
+++ b/docs/002-前端/002-javascript/练习题/编程题.md
@@ -1,4 +1,4 @@
-# 完善下面函数，实现图拍呢懒加载
+# 完善下面函数，实现图片懒加载
 ```js
 function createImg(url) {
   return new Promsie((resolve, reject) => {
@@ -19,7 +19,13 @@ createImg(url).then((value) => {
 })
 ```
 
+
+
 # 10进制转36进制
+
+
+
+
 
 
 # 控制并行的最大请求数
