--- a/docs/002-前端/002-javascript/037-严格模式.md
+++ b/docs/002-前端/002-javascript/037-严格模式.md
@@ -1,2 +1,232 @@
-`<iframe src="http://www.ruanyifeng.com/blog/2013/01/javascript_strict_mode.html">`
 - http://www.ruanyifeng.com/blog/2013/01/javascript_strict_mode.html
+
+### 什么是严格模式
+
+除了正常运行模式，ECMAscript 5添加了第二种运行模式：["严格模式"](https://developer.mozilla.org/en-US/docs/JavaScript/Reference/Functions_and_function_scope/Strict_mode)（strict mode）。顾名思义，这种模式使得Javascript在更严格的条件下运行。
+
+
+
+### 严格模式的目的
+
+- 消除Javascript语法的一些不合理、不严谨之处，减少一些怪异行为;
+
+- 消除代码运行的一些不安全之处，保证代码运行的安全；
+
+- 提高编译器效率，增加运行速度；
+
+- 为未来新版本的Javascript做好铺垫。
+
+
+
+### 如何使用
+
+1. **针对整个脚本文件**
+
+   **将"use strict"放在脚本文件的第一行**，则整个脚本都将以"严格模式"运行。如果这行语句不在第一行，则无效，整个脚本以"正常模式"运行。如果不同模式的代码文件合并成一个文件，这一点需要特别注意。
+
+2. **针对单个函数**
+
+   将"use strict"放在函数体的第一行，则整个函数以"严格模式"运行。
+
+
+
+### **语法和行为改变**
+
+1. **全局变量必须显式声明**，不能出现未声明就赋值。
+
+2. **静态绑定**
+
+   - **禁止使用with语句**
+
+   - **创设eval作用域**
+
+     正常模式下，Javascript语言有两种变量作用域（scope）：全局作用域和函数作用域。严格模式创设了第三种作用域：eval作用域。
+
+     正常模式下，eval语句的作用域，取决于它处于全局作用域，还是处于函数作用域。严格模式下，eval语句本身就是一个作用域，不再能够生成全局变量了，它所生成的变量只能用于eval内部。
+
+     ```js
+     　"use strict";
+     　　var x = 2;
+     　　console.info(eval("var x = 5; x")); // 5
+     　　console.info(x); // 2
+     ```
+
+3. **增强的安全措施**
+
+   - **禁止this关键字指向全局对象**
+
+     ```js
+     　　function f(){
+     　　　　return !this;
+     　　}
+     　　// 返回false，因为"this"指向全局对象，"!this"就是false
+     
+     
+     　　function f(){
+     　　　　"use strict";
+     　　　　return !this;
+     　　}
+     　　// 返回true，因为严格模式下，this的值为undefined，所以"!this"为true。
+     
+     
+     　　function f(){
+     
+     　　　　"use strict";
+     
+     　　　　this.a = 1;
+     
+     　　};
+     
+     　　f();// 报错，this未定义
+     ```
+
+     
+
+   - **禁止在函数内部遍历调用栈**
+
+     ```js
+     　　function f1(){
+     
+     　　　　"use strict";
+     
+     　　　　f1.caller; // 报错
+     
+     　　　　f1.arguments; // 报错
+     
+     　　}
+     
+     　　f1();
+     ```
+
+     
+
+4. **禁止删除变量**
+
+   严格模式下无法删除变量。只有configurable设置为true的对象属性，才能被删除。
+
+   ```js
+   　　"use strict";
+   
+   　　var x;
+   
+   　　delete x; // 语法错误
+   
+   　　var o = Object.create(null, {'x': {
+   　　　　　　value: 1,
+   　　　　　　configurable: true
+   　　}});
+   
+   　　delete o.x; // 删除成功
+   ```
+
+5. **显式报错**
+
+   - 正常模式下，对一个对象的只读属性进行赋值，不会报错，只会默默地失败。严格模式下，将报错。
+
+     ```js
+     　"use strict";
+     
+     　　var o = {};
+     
+     　　Object.defineProperty(o, "v", { value: 1, writable: false });
+     
+     　　o.v = 2; // 报错
+     ```
+
+     
+
+   - 严格模式下，对一个使用getter方法(只有getter没有setter)读取的属性进行赋值，会报错。
+
+   - 严格模式下，对禁止扩展的对象添加新属性，会报错。
+
+   - 严格模式下，删除一个不可删除的属性，会报错。
+
+6.  **重名错误**
+
+   - **对象不能有重名的属性**
+
+   - **函数不能有重名的参数**
+
+     
+
+7. **禁止八进制表示法**
+
+   
+
+8. **arguments对象的限制**
+
+- **不允许对arguments赋值**
+
+  ```js
+  　　"use strict";
+  
+  　　arguments++; // 语法错误
+  
+  　　var obj = { set p(arguments) { } }; // 语法错误
+  
+  　　try { } catch (arguments) { } // 语法错误
+  
+  　　function arguments() { } // 语法错误
+  
+  　　var f = new Function("arguments", "'use strict'; return 17;"); // 语法错误
+  ```
+
+  
+
+- **arguments不再追踪参数的变化**
+
+  ```js
+  　　function f(a) {
+  
+  　　　　a = 2;
+  
+  　　　　return [a, arguments[0]];
+  
+  　　}
+  
+  　　f(1); // 正常模式为[2,2]
+  
+  　　function f(a) {
+  
+  　　　　"use strict";
+  
+  　　　　a = 2;
+  
+  　　　　return [a, arguments[0]];
+  
+  　　}
+  
+  　　f(1); // 严格模式为[2,1]
+  ```
+
+- **禁止使用arguments.callee**
+
+  
+
+9.  **函数必须声明在顶层**
+
+将来Javascript的新版本会引入"块级作用域"。为了与新版本接轨，严格模式只允许在全局作用域或函数作用域的顶层声明函数。也就是说，不允许在非函数的代码块内声明函数。
+
+```js
+　　"use strict";
+
+　　if (true) {
+
+　　　　function f() { } // 语法错误
+
+　　}
+
+　　for (var i = 0; i < 5; i++) {
+
+　　　　function f2() { } // 语法错误
+
+　　}
+```
+
+
+
+
+
+10. **保留字**
+
+为了向将来Javascript的新版本过渡，严格模式新增了一些保留字：implements, interface, let, package, private, protected, public, static, yield。
