--- a/docs/005-数据结构与算法/002-算法.md
+++ b/docs/005-数据结构与算法/002-算法.md
@@ -1,10 +1,148 @@
-### 算法
+# 一、算法
 - 算法： 以计算机能够理解的编程语言编写而成。
+
 - 程序：以人类能够理解的方式描述的，用于编写程序之前。
 
+  
 
 ### 时间复杂度、空间复杂度
- 
+
+
+
+### 算法的思维
+
+把算法问题模版化、套路化、抽象化、公式化。
+
+
+
+### 学习算法的方法
+
+从整体到细节、自顶向下、从抽象到具体的框架思维是通用的。
+
+
+
+### 数据结构的底层存储方式
+
+- 数组。顺序存储。
+- 链表。链式存储。
+
+哈希表、栈、队列、堆、树、图等都是在数组或者链表的基础上建立起来的。
+
+数据结构的种类很多，甚至你也可以创造自己的数据结构，但是底层的存储无非是数组或者链表。
+
+数组和链表的优缺点。
+
+1. 数组
+   - 可以随机访问，查询速度快复杂度是O(1)
+   - 相对节约存储空间
+   - 因为数据结构是连续的，所以内存空间要分配足，如果需要扩容需要分配一块更大的空间然后把数据复制过去，时间复杂度为O(n)。
+   - 如果需要在数组中间插入或者删除元素，需要移动后面的元素，复杂度为O(n)。
+2. 链表
+   - 不能随机访问，访问元素的复杂度是O(n)。
+   - 因为需要存储指针，所以相对数组需要的空间会大些。
+   - 不存在扩容的问题，只需使用指针指向下一个元素即可。
+   - 删除或插入中间元素的复杂度为O(1)。
+
+
+
+### 数据结构的基本操作
+
+数据结构的种类很多，但他们存在的目的无非就是在各种场景下尽可能高效的进行增、删、改、查。
+
+### 数据结构的遍历
+
+1. 线性
+
+   数组的遍历是典型的线性遍历。
+
+   ```ts
+   function traverse(arr: any[]) {
+     for (let i = 0; i < arr.length; i++) {
+       // do something
+     }
+   }
+   ```
+
+   链表的遍历。
+
+   ```ts
+   class ListNode {
+     val: number;
+     next: ListNode;
+   }
+   
+   function traverse(head: ListNode) {
+     for (let p = head; head != null; p = p.next) {
+       // do something
+     }
+   }
+   
+   // 或者
+   function traverse(head: ListNode) {
+     // 前序遍历
+     traverse(head.next)
+     // 后序遍历
+   }
+   
+   ```
+
+   
+
+2. 非线性
+
+   二叉树的遍历是典型的非线性遍历。
+
+   ```ts
+   class TreeNode {
+     val: number;
+     left: TreeNode;
+     right: TreeNode;
+   }
+   
+   function traverse(root: TreeNode) {
+     // 前序遍历
+     traverse(root.left);
+     // 中序遍历
+     traverse(root.right);
+     // 后序遍历
+   }
+   
+   ```
+
+   n叉树的遍历。
+
+   ```ts
+   class TreeNode {
+     val: number;
+     children: TreeNode[];
+   }
+   
+   function traverse(root: TreeNode) {
+     for (let child of root.children) {
+       traverse(child);
+     }
+   }
+   ```
+
+
+
+> 数据结构是工具， 算法是通过合适的工具去解决特定的方法。
+
+
+
+> 习题1: leetcode第124题。
+>
+> #### [二叉树中的最大路径和](https://leetcode-cn.com/problems/binary-tree-maximum-path-sum/)
+
+
+
+
+
+
+
+
+
+
 
 
 
