--- a/docs/002-前端/008-项目工程化/001-webpack/000-记录.md
+++ b/docs/002-前端/008-项目工程化/001-webpack/000-记录.md
@@ -32,4 +32,5 @@
 
 #  常用loader
 ### @teamsupercell/typings-for-css-modules-loader
-生成css module的type.d.ts文件。
+- 作用： 生成css module的type.d.ts文件。
+- 文档： `https://www.npmjs.com/package/@teamsupercell/typings-for-css-modules-loader`
