--- a/docs/004-git/002-ssh.md
+++ b/docs/004-git/002-ssh.md
@@ -1,2 +1,6 @@
 https://www.liaoxuefeng.com/wiki/896043488029600/896954117292416
-# ssh-keygen -t rsa -C "836623330@qq.com"     
+
+- ssh-keygen -t rsa -C "836623330@qq.com"     
+- cd ~/.ssh
+- sudo ssh-add id_rsa_github
+
