--- a/docs/002-前端/004-css/000-基础/表格布局.md
+++ b/docs/002-前端/004-css/000-基础/表格布局.md
@@ -25,3 +25,21 @@
 
 css表格显示只是使用一种类似表格的布局来表现这个结构中的内容。 而html表格则是建立数据的结构。
 
+
+
+
+
+# 表格样式
+
+1、不要给table、th、td以外的表格标签添加样式。
+2、单元格默认平分table的宽度。
+3、th里面的文字默认是加粗、上下左右居中显示
+4、td里面的内容默认上下居中、左右居左显示
+5、table决定了整个表格的宽度
+6、table里的单元格宽度会转换成百分比
+7、表格的每一列必须有宽度
+8、同一列继承最大宽度
+9、同行继承最大和高度
+10、单元格合并;
+colspan------单元格可横跨的列数
+rowspan-----单元格可横跨的行数
