--- a/docs/002-前端/004-css/000-基础/样式重置.md
+++ b/docs/002-前端/004-css/000-基础/样式重置.md
@@ -1,19 +1,30 @@
 ### 标签默认样式重置（css reset）
 
-1、*{margin:0;padding:0;font:12px;}
+```css
+*{margin:0;padding:0;font:12px;}
+```
+
 最好不要这样写,写的具体点。
+
+```css 
 body,p,h1,h2,h3,h4,h5,h6{
-margin:0;
-padding:0;
-font:12px;}
-2、ul,ol{
-list-style:none;
-paddding:0;
-margin:0;}
-3、a{
-text-decoration:none;
+  margin:0;
+  padding:0;
+  font:12px;
 }
-4、img{
-border:none;
+
+ul,ol{
+  list-style:none;
+  paddding:0;
+  margin:0;
 }
-..........
+
+a{
+	text-decoration:none;
+}
+
+img{
+	border:none;
+}
+```
+
