--- a/docs/005-数据结构与算法/002-算法.md
+++ b/docs/005-数据结构与算法/002-算法.md
@@ -1,4 +1,4 @@
-# 一、算法
+# 1、算法
 - 算法： 以计算机能够理解的编程语言编写而成。
 
 - 程序：以人类能够理解的方式描述的，用于编写程序之前。
@@ -17,9 +17,12 @@
 
 ### 学习算法的方法
 
-从整体到细节、自顶向下、从抽象到具体的框架思维是通用的。
+- 从整体到细节、自顶向下、从抽象到具体的框架思维是通用的。
+- 重思维框架，从框架看问题，不纠结于细节。
 
 
+
+# 2、 数据结构
 
 ### 数据结构的底层存储方式
 
@@ -48,6 +51,10 @@
 ### 数据结构的基本操作
 
 数据结构的种类很多，但他们存在的目的无非就是在各种场景下尽可能高效的进行增、删、改、查。
+
+
+
+
 
 ### 数据结构的遍历
 
@@ -130,27 +137,247 @@
 
 
 
-> 习题1: leetcode第124题。
+> 习题
 >
-> #### [二叉树中的最大路径和](https://leetcode-cn.com/problems/binary-tree-maximum-path-sum/)
+
+- leetcode第124题。[二叉树中的最大路径和](https://leetcode-cn.com/problems/binary-tree-maximum-path-sum/)
+- leetcode第105题。[从前序与中序遍历序列构造二叉树](https://leetcode-cn.com/problems/construct-binary-tree-from-preorder-and-inorder-traversal/)
+- leetcode第99题。
 
 
 
 
 
+# 3、动态规划框架
+
+动态规划问题的一般形式就是求最值。核心问题就是穷举，需要把所有答案都列举出来。
+
+动态规划的三要素： 
+
+- 存在重叠子问题。通过备忘录来解决。
+- 最优子结构。
+- 列举状态转移方程。
 
 
 
 
 
+# 4、回溯算法框架
+
+解决一个回溯问题其实就是一个决策树的遍历过程。
+
+只需思考下面三个问题：
+
+- 路径。也就是已经做出的选择。
+- 选择列表。也就是你当前可以做出的选择。
+- 结束条件。也就是达到决策树底层，无法再做决策的条件。
+
+
+
+算法框架如下：
+
+```ts
+let reuslt = []
+
+function backtrack(路径，选择列表) {
+		if (满足被选择的条件) {
+    	result.push()
+      return
+    } 
+		for （let 选择 of 选择列表）{
+      做选择
+      backtrack(下一个路径，下一个选择列表)
+      撤销选择
+		}
+}
+```
+
+- 在前序遍历前做出选择
+- 在后序遍历中撤销选择
+
+
+
+# 5、BFS算法框架
+
+
+
+- BFS(Breath First Search)，广度优先搜索。
+- DFS(Depth First Search)，深度优先搜索。
+
+
+
+BFS和DFS的区别：
+
+1. 找到的路径是最短的。
+2. 空间复杂度比DFS高。
+
+
+
+比如下面的计算二叉树的最小高度。
+
+```ts
+// 这里的节点也可能是表，多叉树等。
+function BFS(node: TreeNode) {
+  // 存放节点的队列
+  let queue = []
+  queue.push(node)
+  
+  let depth = 1
+  let current = null
+  while(queue.length > 0) {
+    current = queue.shift()
+    if (current.left === null && current.right === null) {
+        return depth
+    }
+    if (current.left !== null) {
+      queue.push(current.left)
+		}
+    if (current.right !== null) {
+      queue.push(current.right)
+		}
+    depth++
+  }
+  
+  return depth
+}
+```
+
+
+
+- 核心就是将一个多维的数据结构转化成有顺序的一维数据结构。
+- 因为需要queue来存数据所以空间复杂度要比DFS高。
+
+
+
+### 双向BFS
+
+起点和终点同时扩散，知道有交集为止。
+
+- 双向BFS必须同时知道起点和终点的位置。
 
 
 
 
 
+# 6、双指针框架
+
+分为两类：
+
+- 快慢两个指针。常用来处理链表。
+- 左右两个指针。常用来处理数组。
 
 
 
+### 快慢指针的常用算法
+
+1. 检查链表中是否有环(第65页)。
+2. 已知链表中有环，返回这个环的起始位置(第65页)。
+
+3. 寻找无环链表的中点(第67页)，这个问题和链表的二分其实是一样的。
+4. 寻找链表的倒数第k个元素。
+
+
+
+### 左右指针的常用算法
+
+1. 在一个有序的数组中搜索目标值target。(第68页)。
+2. 两数之和。(第68页)。
+3. 反转数组。(第69页)。
+4. 滑动窗口算法。
+
+
+
+# 7、二分搜索框架
+
+框架：
+
+```ts
+function binarySearch(nums: number[], target: number) {
+  let left = 0;
+  let right = ...
+  while (...) {
+    // 这里不用 (left + right) / 2是因为， 如果left和right很大的话可能导致整型溢出。
+	  let middle = left + (right - left) / 2
+  	if (nums[middle] === target) {
+      ...
+    } else if (nums[middle] < target) {
+      left = ...
+    } else if (nums[middle] > target) {
+      right = ...
+    }
+
+  }
+}
+```
+
+
+
+### 常规二分搜索框架
+
+```ts
+function binarySearch(nums: number[], target: number) {
+  let left = 0;
+  let right = nums.length - 1;
+  while (left <= right) {
+	  let middle = left + (right - left) / 2
+  	if (nums[middle] === target) {
+      return middle
+    } else if (nums[middle] < target) {
+      left = middle + 1
+    } else if (nums[middle] > target) {
+      right = middle - 1
+    }
+  }
+  return -1
+}
+```
+
+
+
+从有序数组中寻找一个数。如果数组中有多个目标值的话这个算法有缺陷。(第73页)
+
+
+
+### 左边界二分搜素
+
+```ts
+function binarySearch(nums: number[], target: number) {
+  if (nums.length === 0) return -1
+  let left = 0;
+  let right = nums.length - 1 // 注意
+  while (left <= right) { // 注意
+	  let middle =(right + left) / 2
+  	if (nums[middle] === target) {
+      // 在这里不反回，锁定right, 移动left, 尝试找到左边是否有满足条件的值
+      // 目的是在左边搜索
+      right = middle - 1
+    } else if (nums[middle] < target) {
+      left = middle + 1
+    } else if (nums[middle] > target) {
+      right = middle - 1  // 注意 
+    }
+  }
+  // 检查出界
+  if (left >= nums.length || nums[left] != target) {
+		return -1
+  }
+  return left
+}
+```
+
+
+
+寻找左侧边界的二分搜索。(第75页)
+
+
+
+### 右边界二分搜素
+
+
+
+# 8、滑动窗口框架
+
+ 
 
 
 
