--- a/docs/005-数据结构与算法/003-排序算法.md
+++ b/docs/005-数据结构与算法/003-排序算法.md
@@ -1,17 +1,16 @@
-# 一、排序算法
-
-> 参考文档
-
 - *https://www.cnblogs.com/onepixel/articles/7674659.html*
+
+# 十大排序算法的对比
 
 
 ![](./image/210314-1.png)
 
-### 比较类排序
 
-##### 交换排序
 
-- 冒泡排序
+# 比较类排序
+
+### 冒泡排序
+
 - 思路
 
   1. 每遍历1次外层循环一轮冒泡完成。
@@ -35,7 +34,10 @@ function bubbleSort(arr) {
 }
 ```
 
-- 快速排序
+
+
+### 快速排序
+
 - 思路
   1. 以数组的第一位作为基准数，遍历整个数组将所有比arr[0]数字从第二位开始排列。同时记录最后一个比arr[0]小的位置index，此时[1, index]区间的数都是比arr[0]小， [index+1, arr.length-1]都是比arr[0]大。
   2. 将arr[0]和arr[index]调换，此时index位置的数字就已经排序好了。
@@ -116,7 +118,11 @@ function qickSort(arr, start, end) {
 }
 ```
 
-##### 插入排序
+
+
+
+
+### 插入排序
 
 - 简单插入排序
 - 思路
@@ -142,7 +148,9 @@ function insertionSort(arr) {
 }
 ```
 
-- 希尔插入排序
+
+
+### 希尔插入排序
 
 ```js
 function shellSort(arr) {
@@ -163,7 +171,9 @@ function shellSort(arr) {
 }
 ```
 
-##### 选择排序
+
+
+### 选择排序
 
 - 简单选择排序
 
@@ -188,18 +198,21 @@ function selectionSort(arr) {
 }
 ```
 
-- 堆排序
-  - 基本思路
-    - 先把数组构造成大顶堆，大顶堆的特点是父节点大于其子节点
-    - 将堆顶和数组的最后一个元素交换，这样就把最大值放到了数组的最后面
-    - 把数组长度为n-1的部分重新构造大顶堆，把堆顶放到数组的n-1的位置
-    - 重复上面的步骤
-  - 堆的特点
-    - 是一个完全二叉树
-    - 所有子节点的值都小于(或大于)父节点的值
-  - 大顶堆
-  - 小顶堆
-  - 堆排序的时间复杂度O(nlogn)
+
+
+### 堆排序
+
+- 基本思路
+  - 先把数组构造成大顶堆，大顶堆的特点是父节点大于其子节点
+  - 将堆顶和数组的最后一个元素交换，这样就把最大值放到了数组的最后面
+  - 把数组长度为n-1的部分重新构造大顶堆，把堆顶放到数组的n-1的位置
+  - 重复上面的步骤
+- 堆的特点
+  - 是一个完全二叉树
+  - 所有子节点的值都小于(或大于)父节点的值
+- 大顶堆
+- 小顶堆
+- 堆排序的时间复杂度O(nlogn)
 
 ```js
 // 交换两个节点
@@ -255,7 +268,11 @@ heapSort(Arr);
 alert(Arr);
 ```
 
-##### 归并排序
+
+
+
+
+### 归并排序
 
 - 二路归并排序
 
@@ -296,10 +313,13 @@ function merge(left, right) {
 
 - 多路归并排序
 
-### 非比较类排序
 
-- 计数排序
-  > 必须知道数组的组大值。适用于在某一区间的整数无序集合的排序。
+
+# 非比较类排序
+
+### 计数排序
+
+> 必须知道数组的组大值。适用于在某一区间的整数无序集合的排序。
 
 ```js
 function countingSort(arr, maxValue) {
@@ -329,7 +349,11 @@ function countingSort(arr, maxValue) {
 }
 ```
 
-- 桶排序
+
+
+
+
+### 桶排序
 
 ```js
 function bucketSort(arr, bucketSize) {
@@ -394,4 +418,6 @@ function insertionSort(arr) {
 }
 ```
 
-- 基数排序
+
+
+### 基数排序
