--- a/docs/005-数据结构与算法/005-加密算法.md
+++ b/docs/005-数据结构与算法/005-加密算法.md
@@ -3,7 +3,6 @@
 - 窃听
 A向B发送消息的过程中， 消息可能被窃听。
 解决：加密。
-
 - 假冒
 A向B发送消息，然而B有可能是X冒充的。反过来讲，A也可能是X冒充的。
 解决： 消息验证码或数字签名。
@@ -14,9 +13,14 @@ A向B发送消息，然而B有可能是X冒充的。反过来讲，A也可能是
 - 篡改
 即便B收到了A发送的消息，也可能是被X篡改过的。
 解决： 消息验证码或数字签名。
-
 - 事后否认
 B收到了A发过来的带有恶意的消息，但是A却否认是他发的。
+
+
+
+
+
+
 
 # 加密算法
 ###  哈希函数
@@ -39,7 +43,7 @@ B收到了A发过来的带有恶意的消息，但是A却否认是他发的。
 
 
 
-### 共享秘钥加密
+### 共享秘钥加密（对称加密）
 加密数据的方法可以分为两种：
 - 加密和解密都使用相同秘钥的*共享秘钥加密*，分别使用不同秘钥的*公开秘钥加密*。
 - 共享秘钥加密是加密和解密都使用相同秘钥的一种加密方式，由于使用的秘钥相同，所以这种算法也成为*对称加密*。
@@ -60,7 +64,11 @@ B收到了A发过来的带有恶意的消息，但是A却否认是他发的。
 其中`AES`应用最广泛。
 
 
-### 公开秘钥加密
+
+
+
+
+### 公开秘钥加密（非对称加密）
 - 公开秘钥加密是加密和解密使用不同秘钥的一种加密方法。由于使用的秘钥不同所以这种算法页被称为“非对称加密”。
 - 加密的用的秘钥叫做“公开秘钥”，解密用的秘钥叫做“私有秘钥”。
 
@@ -88,7 +96,9 @@ B收到了A发过来的带有恶意的消息，但是A却否认是他发的。
 其中使用最广泛的是RSA算法。
 
 
-###  混合加密
+
+
+###  混合加密（对称加密和非对称加密一起使用）
 > 共享秘钥加密存在无法安全传输秘钥的问题，公开秘钥加密又存在加密解密的速度较慢的问题。
 将两者结合就可以实现一种互补的加密方式，“混合加密”。
 - 1、假设A向B发送消息。
@@ -101,7 +111,6 @@ B收到了A发过来的带有恶意的消息，但是A却否认是他发的。
 解决了共享秘钥加密，秘钥发送的安全问题。
 
 - 迪菲-赫尔曼秘钥交换
-
 
 
 
