--- a/docs/002-前端/008-项目工程化/001-webpack/000-记录.md
+++ b/docs/002-前端/008-项目工程化/001-webpack/000-记录.md
@@ -2,6 +2,8 @@
 1. [webpack优化](https://blog.csdn.net/u011413061/article/details/51872412?from=timeline&isappinstalled=0)
 2. [生成config](https://createapp.dev/webpack)
 
+
+
 # 优化
 1. resolve：减小 Webpack 覆盖的范围
 2. loaders：exclude，屏蔽掉 npm 里的包，从而使整包的构建效率飞速提高。
@@ -16,6 +18,8 @@
     - babel-loader.cacheDirectory
     - HappyPack.cache
     - memory-fs
+    
+    
 
 # 插件
 1. webpack-bundle-analyzer
@@ -25,12 +29,21 @@
 5. DedupePlugin
 6. HappyPack
 7. HardSource
+### sw-precache-webpack-plugin
+
+- 作用： 生成sw.js文件
+- 文档：https://github.com/goldhand/sw-precache-webpack-plugin/blob/master/src/index.js
+
+
+
 # loader
+
+### @teamsupercell/typings-for-css-modules-loader
+
+- 作用： 生成css module的type.d.ts文件。
+- 文档： `https://www.npmjs.com/package/@teamsupercell/typings-for-css-modules-loader`
+
+
 
 # webpackDevMiddleware
 
-
-#  常用loader
-### @teamsupercell/typings-for-css-modules-loader
-- 作用： 生成css module的type.d.ts文件。
-- 文档： `https://www.npmjs.com/package/@teamsupercell/typings-for-css-modules-loader`
