--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -84,7 +84,7 @@
 30. [v8引擎](https://github.com/Dyanwen/books/blob/master/%E5%9B%BE%E8%A7%A3GoogleV8/01_%E4%BD%A0%E7%9F%A5%E9%81%93v8%E6%98%AF%E5%A6%82%E4%BD%95%E6%89%A7%E8%A1%8Cjs%E4%BB%A3%E7%A0%81%E7%9A%84%E5%90%97%EF%BC%9F.md)
 31. [学习线路](https://xie.infoq.cn/article/b674d5f0e32881b78a39aca35)
 32. [阮一峰](https://javascript.ruanyifeng.com/bom/performance.html)
-
+33. [how-javascript-works](https://github.com/Troland/how-javascript-works)
 
 # 面试
 
