--- a/docs/002-前端/012-常用库/000-常用npm包.md
+++ b/docs/002-前端/012-常用库/000-常用npm包.md
@@ -1,18 +1,50 @@
-### fs-extra
+# fs-extra
 文件操作相关工具库
 是系统fs模块的扩展，提供了更多便利的 API，并继承了fs模块的 API
 
-### semver
-minimist: 获取命令行参数
+# semver
+- minimist: 获取命令行参数
+- [文档](https://www.npmjs.com/package/minimist)
 
-### nodemon
+# nodemon
 开发服务自动重启。
 
-### Snipaste
-### bilibili flv.js
-### phaser
-### vm-browserify
-### heapdump
-### Lottie
-### http-proxy-mideware
-### dotenv和dotenv-expand
+# Snipaste
+# bilibili flv.js
+# phaser
+# vm-browserify
+# heapdump
+# Lottie
+# http-proxy-mideware
+# dotenv和dotenv-expand
+
+# packez
+- [文档](https://www.npmjs.com/package/packez)
+
+
+# ts-node
+`ts-node`是`tsc`和`node`的结合。相当于先执行`tsc`将`ts`文件编译成`js`文件，然后使用`node`执行编译生成的`js`文件。
+### 解决的问题
+1. 当`tsconfig.json`设置`"module":"ESNext"`时报错
+
+   ```js
+   import NumberChain from "./chain/NumberChain";
+   ^^^^^^
+   
+   SyntaxError: Cannot use import statement outside a module
+   ```
+
+   原因：本质原因是`node`不支持`import`
+   解决：
+   1. 将`"module":"ESNext"`改成`"module":"CommanJs"`
+   2. `node13`可以运行
+   3. 使用`babel`转换
+2. 别名识别不了
+
+
+# TySheMo
+[文档](https://www.tangshuang.net/7101.html#title-3-1)
+
+**TySheMo 主要为解决复杂的前端数据模型场景准备。**它不是一个典型的新一代项目，并不追求性能和特性上的多厉害，相反，它是在性能有损的前提下，提升前端数据管理的高可用性。
+
+**TySheMo 的主要目标，是为那些需要对结构化数据进行前端建模的场景提供一套解决方案。**
