--- a/docs/002-前端/012-常用库/000-常用npm包.md
+++ b/docs/002-前端/012-常用库/000-常用npm包.md
@@ -48,3 +48,15 @@
 **TySheMo 主要为解决复杂的前端数据模型场景准备。**它不是一个典型的新一代项目，并不追求性能和特性上的多厉害，相反，它是在性能有损的前提下，提升前端数据管理的高可用性。
 
 **TySheMo 的主要目标，是为那些需要对结构化数据进行前端建模的场景提供一套解决方案。**
+
+
+
+# source-map-support
+`source-map-support `是一个在` Node.js `环境下支持` Source Map` 的模块。
+
+- https://wizardforcel.gitbooks.io/node-in-debugging/content/4.1.html
+
+
+# react-dev-inspector
+「开发提效」从页面直接打开代码文件。
+- https://segmentfault.com/a/1190000039850571
