--- a/docs/005-数据结构与算法/002-算法.md
+++ b/docs/005-数据结构与算法/002-算法.md
@@ -172,7 +172,7 @@
 - 选择列表。也就是你当前可以做出的选择。
 - 结束条件。也就是达到决策树底层，无法再做决策的条件。
 
-
+ 
 
 算法框架如下：
 
@@ -377,15 +377,114 @@ function binarySearch(nums: number[], target: number) {
 
 # 8、滑动窗口框架
 
+```js
+function slidingWindow(s, t) {
+  let left = 0
+  let right = 0
+
+  while (right < s.length) {
+    let c = s[right]
+    right++
+    // 窗口增加，需要做的逻辑
+    // console.log(left, right, s.slice(left, right))
+
+    // 当找到解时，尝试收缩左边
+    while (
+      // 当找到解时
+    ) {
+      let d = s[left]
+      left++
+      // 窗口增加，需要做的逻辑
+    }
+  }
+}
+```
+
+
+
+ 有两个字符串S和T， 在S中找到包含T中全部字母的最短字符串。
+
+```js
+function minWindow(s, t) {
+  // key是需要的字母， value是需要的个数
+  const need = {}
+  // 当前窗口t中字符出现的个数
+  const stringWindow = {}
+  for (let char of t) {
+    need[char] = need[char] !== undefined ? need[char] + 1: 1
+    stringWindow[char] = 0
+  }
+
+  // 用区间[left, right)表示window
+  // 窗口的起始位置
+  let left = 0
+  // 窗口的结束位置
+  let right = 0
+  // 记录当前窗口已经满足要求的包含t中字符串的个数
+  let valid = 0
+
+  // satrt: 当前解的起始位置
+  let start = 0
+  // 当前解的结束位置
+  let end = Number.MAX_VALUE
+
+  while (right < s.length) {
+    // c是需要移入到窗口的字符
+    let c = s[right]
+    right++
+    // 如果c是t中的一个字符
+    if (need[c]) {
+      stringWindow[c]++
+      if (stringWindow[c] === need[c]) {
+        valid++
+      }
+    }
+
+    // console.log(left, right, s.slice(left, right))
+    // 判断左侧是否需要收缩
+    while (valid === t.length) {
+      // console.log('解', left, right, s.slice(left, right))
+      // 更新最小覆盖字符串
+      // 找到了第一个解，或者找比上一个更优的解
+      if (right - left < end - start) {
+        start = left
+        end = right
+      }
+
+      // 在找到解之后，尝试收缩left
+      let d = s[left]
+      left++
+      if (need[d]) {
+        stringWindow[d]--
+        if (stringWindow[d] < need[d]) {
+          valid--
+        }
+      }
+    }
+
+  }
+  console.log(start, end)
+  return end === Number.MAX_VALUE ? '' : s.substr(start, end)
+}
+
+console.log('最小窗口',minWindow('asdffdfhgfah', 'fah'))
+```
+
+
+
+> 习题：
+
+
+
+
+
+# 9、动态规划
+
+### 最长递增子序列
+
+
+
  
-
-
-
-
-
-
-
-
 
 
 
