--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -50,6 +50,15 @@
 6. [chrome插件下载地址](https://www.crx4chrome.com/crx/3068/)
 7. [流程图工具](https://app.diagrams.net/?src=about)
 
+### JS 正则可视化工具
+
+- https://jex.im/regulex
+- https://regexper.com (网络需自由)
+  - https://aoxiaoqiang.github.io/reg （替代工具）
+- https://www.debuggex.com
+
+
+
 # 前端学习
 
 1. https://github.com/amandakelake/blog
