--- a/docs/002-前端/001-html/h5新增/跨文档通信.md
+++ b/docs/002-前端/001-html/h5新增/跨文档通信.md
@@ -28,34 +28,38 @@ $("#my").contentWindow
 顶级窗口
 
 ### 7、window.opener
-a页面通过window.open 打开了b页面，b页面的window.opener就是a。
+a页面通过`window.open`打开了b页面，b页面的`window.opener`就是a。
 
 ### 8、postMessage
-`window.postMessage() `方法可以`安全地实现跨源通信`。通常，对于两个不同页面的脚本，只有当执行它们的页面位于具有相同的协议（通常为https），端口号（443为https的默认值），以及主机  (两个页面的模数 Document.domain设置为相同的值) 时，这两个脚本才能相互通信。window.postMessage() 方法提供了一种受控机制来规避此限制，只要正确的使用，这种方法就很安全。
+`window.postMessage() `方法可以`安全地实现跨源通信`。通常，对于两个不同页面的脚本，只有当执行它们的页面位于具有相同的协议（通常为https），端口号（443为https的默认值），以及主机  (两个页面的模数 Document.domain设置为相同的值) 时，这两个脚本才能相互通信。
+
+`window.postMessage()` 方法提供了一种受控机制来规避此限制，只要正确的使用，这种方法就很安全。
 
 > 从广义上讲，一个窗口可以获得对另一个窗口的引用（比如 targetWindow = window.opener），然后在窗口上调用 targetWindow.postMessage() 方法分发一个  MessageEvent 消息。接收消息的窗口可以根据需要自由处理此事件 (en-US)。传递给 window.postMessage() 的参数（比如 message ）将通过消息事件对象暴露给接收消息的窗口。
 
-语法:
+**语法:**
+
 ```js
 otherWindow.postMessage(message, targetOrigin, [transfer]);
 ```
 - otherWindow。其他窗口的一个引用，比如iframe的contentWindow属性、执行window.open返回的窗口对象、或者是命名过或数值索引的window.frames。
-
 - message。将要发送到其他 window的数据。它将会被`结构化克隆算法序列化`。这意味着你可以不受什么限制的将数据对象安全的传送给目标窗口而无需自己序列化。
-
 - targetOrigin。通过窗口的origin属性来指定哪些窗口能接收到消息事件，其值可以是字符串"*"（表示无限制）或者一个URI。如果你明确的知道消息应该发送到哪个窗口，那么请始终提供一个有确切值的targetOrigin，而不是*。不提供确切的目标将导致数据泄露到任何对数据感兴趣的恶意站点。
+- transfer 可选。**是一串和message同时传递的` Transferable `对象. 这些对象的所有权将被转移给消息的接收方，而发送一方将不再保有所有权。**
 
-- transfer 可选。是一串和message同时传递的` Transferable `对象. 这些对象的所有权将被转移给消息的接收方，而发送一方将不再保有所有权。
+
 
 > 关于构化克隆算法可以看这里
 > https://developer.mozilla.org/en-US/docs/Web/API/Web_Workers_API/Structured_clone_algorithm
 
 > 关于` Transferable `对象可以看这里。
-> Transferable 接口代表一个能在不同可执行上下文之间，列如主线程和 Worker 之间，相互传递的对象。
+> Transferable 接口代表一个**能在不同可执行上下文之间，列如主线程和 Worker 之间，相互传递的对象**。
 > https://developer.mozilla.org/zh-CN/docs/Web/API/Transferable
 
 
-用法：
+
+**用法：**
+
 1. 在发送消息的窗口
 ```js
 objWindow.postMessage('abc','http://www.a.com');
