--- a/docs/002-前端/012-常用库/000-常用npm包.md
+++ b/docs/002-前端/012-常用库/000-常用npm包.md
@@ -3,7 +3,7 @@
 是系统fs模块的扩展，提供了更多便利的 API，并继承了fs模块的 API
 
 # semver
-- minimist: 获取命令行参数
+# minimist: 获取命令行参数
 - [文档](https://www.npmjs.com/package/minimist)
 
 # nodemon
