--- a/docs/002-前端/003-typescript/工具类型.md
+++ b/docs/002-前端/003-typescript/工具类型.md
@@ -1,3 +1,274 @@
+# 声明变量
+```ts
+// 声明变量
+declare var NaN: number;
+declare var Infinity: number;
+
+// 声明函数
+declare function eval(x: string): any;
+```
+
+# 声明构造函数和实例类型
+```ts
+// 构造函数
+interface PersonConstructor {
+  new(name: string, age: number): Person;
+  (name: string, age: number): Person;
+  readonly prototype: Object;
+}
+// 实例类型
+interface Person {
+  name: string;
+  age: number;
+}
+
+declare var Person: PersonConstructor
+// Person的构造函数实现
+// function Person (name, age) {
+//   this.name = name
+//   this.age = age
+// }
+```
+# ThisParameterType<T>
+获取函数中声明的`this`的类型。
+```ts
+type ThisParameterType<T> = T extends (this: infer U, ...args: any[]) => any ? U : unknown;
+```
+
+如果要给函数声明`this`的类型， `this`必须放在第一个位置。
+并且获取参数的类型时是不包含`this`的。
+```ts
+function toString(this:number, arg1):string {
+  return '';
+}
+
+type MyThisType = ThisParameterType<typeof toString>
+// type MyThisType = number
+type Args = Parameters<typeof toString>
+// type Args = [arg1: any]
+```
+
+# OmitThisParameter<T>
+```ts
+/**
+ * Removes the 'this' parameter from a function type.
+ */
+type OmitThisParameter<T> = unknown extends ThisParameterType<T> ? T : T extends (...args: infer A) => infer R ? (...args: A) => R : T;
+```
+# ReadonlyArray<T>
+
+
 # Partial<T>
+```ts
+/**
+ * Make all properties in T optional
+ */
+type Partial<T> = {
+    [P in keyof T]?: T[P];
+};
+```
 
 # Required<T>
+```ts
+/**
+ * Make all properties in T required
+ */
+type Required<T> = {
+    [P in keyof T]-?: T[P];
+};
+
+```
+
+
+# Readonly<T>
+```ts
+/**
+ * Make all properties in T readonly
+ */
+type Readonly<T> = {
+    readonly [P in keyof T]: T[P];
+};
+
+```
+
+
+# Pick<T, k>
+```ts
+/**
+ * From T, pick a set of properties whose keys are in the union K
+ */
+type Pick<T, K extends keyof T> = {
+    [P in K]: T[P];
+};
+```
+
+
+# Record<K, T>
+```ts
+/**
+ * Construct a type with a set of properties K of type T
+ */
+type Record<K extends keyof any, T> = {
+    [P in K]: T;
+};
+```
+
+# Exclude<T, U>
+从T中提取不能赋值给U的类型。一般用于联合类型。
+```ts
+/**
+ * Exclude from T those types that are assignable to U
+ */
+type Exclude<T, U> = T extends U ? never : T;
+
+type R = Exclude<'a'|'b', 'a'>  // 'b'
+```
+
+
+# Extract<T,U>
+从T中提取能赋值给U的类型。一般用于联合类型。
+```ts
+/**
+ * Extract from T those types that are assignable to U
+ */
+type Extract<T, U> = T extends U ? T : never;
+```
+
+
+# Omit<T,K>
+移除类型中指定的字段。
+```ts
+/**
+ * Construct a type with the properties of T except for those in type K.
+ */
+type Omit<T, K extends keyof any> = Pick<T, Exclude<keyof T, K>>;
+```
+
+# NonNullable<T>
+```ts
+/**
+ * Exclude null and undefined from T
+ */
+type NonNullable<T> = T extends null | undefined ? never : T;
+```
+
+
+# Parameters<T>
+获取函数的参数。
+```ts
+/**
+ * Obtain the parameters of a function type in a tuple
+ */
+type Parameters<T extends (...args: any) => any> = T extends (...args: infer P) => any ? P : never;
+
+```
+# ConstructorParameters<T>
+获取构造函数的参数。
+```ts
+/**
+ * Obtain the parameters of a constructor function type in a tuple
+ */
+type ConstructorParameters<T extends abstract new (...args: any) => any> = T extends abstract new (...args: infer P) => any ? P : never;
+
+```
+# ReturnType<T>
+```ts
+/**
+ * Obtain the return type of a function type
+ */
+type ReturnType<T extends (...args: any) => any> = T extends (...args: any) => infer R ? R : any;
+
+```
+
+
+# InstanceType<T>
+```ts
+/**
+ * Obtain the return type of a constructor function type
+ */
+type InstanceType<T extends abstract new (...args: any) => any> = T extends abstract new (...args: any) => infer R ? R : any;
+
+```
+# Uppercase<T>
+```ts
+/**
+ * Convert string literal type to uppercase
+ */
+type Uppercase<S extends string> = intrinsic;
+
+```
+
+
+# Lowercase<T>
+```ts
+/**
+ * Convert string literal type to lowercase
+ */
+type Lowercase<S extends string> = intrinsic;
+
+```
+
+
+# Capitalize<T>
+```ts
+/**
+ * Convert first character of string literal type to uppercase
+ */
+type Capitalize<S extends string> = intrinsic;
+```
+
+
+# Uncapitalize<T>
+```ts
+/**
+ * Convert first character of string literal type to lowercase
+ */
+type Uncapitalize<S extends string> = intrinsic;
+```
+
+
+# ThisType<T>
+- https://jkchao.github.io/typescript-book-chinese/typings/thisType.html
+用于指定对象的this类型。
+- 可以参考vue2.0中声明组件时ThisType的用法。
+> 注意： 必须设置`"noImplicitThis": true`， 否则不起作用。
+```ts
+/**
+ * Marker for contextual 'this' type
+ */
+interface ThisType<T> { }
+```
+用法：
+```ts
+// Compile with --noImplicitThis
+
+type ObjectDescriptor<D, M> = {
+  data?: D;
+  methods?: M & ThisType<D & M>; // Type of 'this' in methods is D & M
+};
+
+function makeObject<D, M>(desc: ObjectDescriptor<D, M>): D & M {
+  let data: object = desc.data || {};
+  let methods: object = desc.methods || {};
+  return { ...data, ...methods } as D & M;
+}
+
+let obj = makeObject({
+  data: { x: 0, y: 0 },
+  methods: {
+    moveBy(dx: number, dy: number) {
+      this.x += dx; // Strongly typed this
+      this.y += dy; // Strongly typed this
+    }
+  }
+});
+
+obj.x = 10;
+obj.y = 20;
+obj.moveBy(5, 5);
+```
+
+
+# Required<T>
+```ts
+```
