--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -49,6 +49,7 @@
 5. [astexplorer](https://astexplorer.net/)
 6. [chrome插件下载地址](https://www.crx4chrome.com/crx/3068/)
 7. [流程图工具](https://app.diagrams.net/?src=about)
+8. [算法可视化工具](https://github.com/algorithm-visualizer)
 
 ### JS 正则可视化工具
 
@@ -57,6 +58,8 @@
   - https://aoxiaoqiang.github.io/reg （替代工具）
 - https://www.debuggex.com
 
+### 在线编辑器
+- https://microsoft.github.io/monaco-editor/
 
 
 # 前端学习
