--- a/docs/018-基础学科/英语学习/语法/007-一般现在时.md
+++ b/docs/018-基础学科/英语学习/语法/007-一般现在时.md
@@ -212,6 +212,12 @@ There are not any students on the playground.
 
 
 
+Is there a computer on the desk?
+
+Are there any students on the playground?
+
+
+
 **回答：**
 
 Yes，there is. / No，there isn’t
