--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -124,6 +124,10 @@
 # chrome
 - [Chrome comic漫画](https://www.google.com/googlebooks/chrome/big_00.html)
 
+
+# 搭建blog
+### vercel
+- https://zhuanlan.zhihu.com/p/347990778
 # 其他
 
 
