--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -49,7 +49,6 @@
 5. [astexplorer](https://astexplorer.net/)
 6. [chrome插件下载地址](https://www.crx4chrome.com/crx/3068/)
 7. [流程图工具](https://app.diagrams.net/?src=about)
-8. [算法可视化工具](https://github.com/algorithm-visualizer)
 
 ### JS 正则可视化工具
 
@@ -97,6 +96,13 @@
 31. [学习线路](https://xie.infoq.cn/article/b674d5f0e32881b78a39aca35)
 32. [阮一峰](https://javascript.ruanyifeng.com/bom/performance.html)
 33. [how-javascript-works](https://github.com/Troland/how-javascript-works)
+
+
+# 算法
+1. [leetCode cookbook](https://books.halfrost.com/leetcode/ChapterFour/0100~0199/0135.Candy/)
+8. [算法可视化工具](https://github.com/algorithm-visualizer)
+
+
 
 # 面试
 
