--- a/docs/005-数据结构与算法/001-数据结构.md
+++ b/docs/005-数据结构与算法/001-数据结构.md
@@ -4,11 +4,25 @@
 # 队列
 # 哈希表
 # 堆
-# 二叉树
+# 树
+
+### 二叉树
+
+### 多叉树
+### 二叉查找树
+- https://www.cnblogs.com/gaochundong/p/binary_search_tree.html
+- https://leetcode-cn.com/problems/minimum-distance-between-bst-nodes/solution/fu-xue-ming-zhu-fen-xiang-er-cha-shu-san-aj2m/
+二叉查找树（Binary Search Tree），（又：二叉搜索树，二叉排序树）。
+- 它或者是一棵空树，或者是具有下列性质的二叉树： 
+  - 若它的左子树不空，则左子树上所有结点的值均小于它的根结点的值； 
+  - 若它的右子树不空，则右子树上所有结点的值均大于它的根结点的值； 
+  - 它的左、右子树也分别为二叉排序树。
+
+> **二叉搜索树（BST）的中序遍历是有序的。**
+- 先处理left时是升序， 先处理right时是降序。
 
 
-
-
+> 可中断的树的前序遍历？
 
 
 
