--- a/docs/005-数据结构与算法/001-数据结构.md
+++ b/docs/005-数据结构与算法/001-数据结构.md
@@ -1,4 +1,13 @@
 # 链表
+### 单向链表
+### 环形链表
+### 常用算法
+- Floyd 判圈算法（又称龟兔赛跑算法）
+- 双指针
+- 递归（前序遍历、后序遍历）
+
+
+
 # 数组
 # 栈
 # 队列
@@ -25,7 +34,7 @@
 > 可中断的树的前序遍历？
 
 
-
+# 图
 
 
 
