--- a/docs/018-基础学科/其他/认知觉醒.md
+++ b/docs/018-基础学科/其他/认知觉醒.md
@@ -1,4 +1,4 @@
-# 大脑一切问题的起源
+# 1、大脑一切问题的起源
 
 ### 三重大脑
 
@@ -158,9 +158,61 @@
 
 ### 成长权重对比——学习、思考、行动、改变
 
-学习 > 思考 > 行动 > 改变。
+>  学习 > 思考 > 行动 > 改变。
+
+**如果不盯住内层的改变量， 那么学习再多的东西也是事倍功半的。**
+
+很多人之所以痛苦焦虑，就是因为只盯着表层的学习量。他们读了很多书，报了很多课，天天打卡、日日坚持，努力到感动自己，但就是没有深入关注过自己的思考、行动和改变，所以总是感到学无所获，甚至是以为自己不够努力，应该继续加大学习量。结果陷入了“越学越焦虑， 越焦虑越学”的恶性循环。
+
+原因是我们的天性在作祟。因为单纯保持学习输入是简单的，而思考、行动和改变则相对困难。表层学习也是最能看到“效果”的， 今天读了一本书， 背了20个单词.......停留在表层就会什么都想学，什么都想要，忙忙碌碌却收效甚微。
+
+解决办法就是深入底层，盯住实际改变。
+
+- 读书的时候不求记住所有知识， 只要有一两个知识能够实际运用到生活中去并且有实现的改变即可。读书的目的是什么？**不就是运用书中的理论让自己能够活得更好，同时强大自己的内心世界。**
 
 
 
-如果不盯住内层的改变量， 那么学习再多的东西也是事倍功半的。
+### 学习的平台期
+
+学习的进展和时间并不是简单直线的正比关系， 不仅仅存在上升期， 还存在平台期。
+
+-  在上升期， 随着时间的加长学习的进展也慢慢前进。
+- 在平台期， 这段时间花费很大精力学习也没有取得很大的成果， 甚至停滞不前，这只是假象。
+- 上升期和平台期是相互交替的， 当度过平台期时又会迎来下一个上升期。
+- 平台期可以理解成瓶颈， 就像武侠小说里的武者武功练到一个阶段后就会遇到瓶颈， 突破瓶颈后就会迎来下一个上升期。
+
+
+
+> 学习英语也有6个月的平台期， 在这6个月中可能进展很慢。
+
+
+
+我们知道了平台期后， 就能在面对长期的冷寂或挫折失败时做出与他人不同的选择： 有人要放弃，而我们继续坚持。
+
+
+
+
+
+> 耐心不是毅力带来的结果，而是具有长远目光的结果。
+
+### 怎样拥有延时满足的耐心
+
+1. 首先，面对天性，放下心里包袱，坦然接纳自己，接受自己没有很好的耐心的事实。不要指望一下子就能很有耐心， 如果对自己不能立即变好这件事感到焦虑，这本身就是缺乏耐心的表现。
+2. 面对诱惑，要学会延时满足，变对抗为沟通。
+   - 舒适和诱惑是本能脑与情绪脑的最爱，完全放弃舒适和诱惑就想当于和本能脑、情绪脑直接对抗。很显然理智脑不是对手，失败时迟早的事。
+   - 明智的做法是和它们沟通。告诉它们： “该享受的一点都不会少， 只是不是现在享受， 而是在完成重要的事情之后。”这是一个有效的策略， 因为完全放弃享受它们是不会同意的，单延迟享受，它们是能够接受的。
+   - 这这种“后娱乐”的好处是，将享乐的快感建立在完成重要任务后的成就感之上，很放松，很踏实，就像一种奖赏；而”先娱乐“虽然刚开始很快活，但精力会无限发散，拖延重要的工作，人会空虚，焦虑。
+
+3. 面对困难，主动改变视角，**赋予行动意义**。
+   - 明白了深度阅读的意义，就会放弃听读、速度， 转而开始精度和输出。
+   - 明白了运动的真正好处， 就会告别慵懒主动坚持锻炼。
+4. 最高级的方法是请本能脑和情绪闹出来解决困难。**想办法让本能脑和情绪闹感受到困难食物的乐趣并上瘾，才是理智脑的最高级的策略。学会释放本能脑和情绪脑的强大力量，我们就会无往不胜！**
+
+
+
+
+
+# 2、潜意识
+
+
 
