--- a/docs/018-基础学科/英语学习/语法/001-句子成分与基本句型.md
+++ b/docs/018-基础学科/英语学习/语法/001-句子成分与基本句型.md
@@ -1,3 +1,18 @@
+# 词类
+
+- 名词 n.
+- 形容词 adj.
+- 数词 num.
+- 代词 pron.
+- 动词 v.
+- 副词 adv
+- 冠词 art.
+- 介词 prep
+- 连词 conj
+- 感叹词 int
+
+
+
 # 1、句子成分
 
 句子成分就是构成句子的各个部分。英语的句子成分总共七个：**主语、谓语、宾语、表语、补语、定语、状语，还有一个不太重要的同位语。**
@@ -94,7 +109,7 @@
 
   3）I love you. 我爱你。
 
-  根据谓语定义：“Love”就是说明主语“I”做的动作（心理行为），所以动词“love”就是谓语\
+  根据谓语定义：“Love”就是说明主语“I”做的动作（心理行为），所以动词“love”就是谓语
 
   4）I speak Chinese. 我讲中文。
 
@@ -102,7 +117,7 @@
 
   5）She looks after her brother. 她照顾她的弟弟。（主语是第三人单数，所以谓语用了第三人称单数）
 
-  根据谓语定义：“Looks after”就是说明主语“she”做的动作，所以动词短语“looks after”就是谓语\
+  根据谓语定义：“Looks after”就是说明主语“she”做的动作，所以动词短语“looks after”就是谓语
 
   5）I get up at six. 我六点起床。
 
@@ -215,6 +230,8 @@ are是系动词，Students是名词作表语。所以状态型谓语就是“are
 - **介词短语**
 - **名词所有格**
 - **动词不定式**
+  - My work is to clean the room every day.
+  - His dream is to be a doctor.
 - **动名词**
 - **代词**
 - **数词**
@@ -317,21 +334,21 @@ are是系动词，Students是名词作表语。所以状态型谓语就是“are
 
    pen 钢笔 comb 梳子 key 钥匙 house 房子 shirt 衬衫 school 学校 mirror 镜子
 
-   1）I buy a book every year.我每年买一本书。
+   1）I buy **a book** every year.我每年买一本书。
 
-   2）I buy apples every day.我每天买苹果。
+   2）I buy **apples** every day.我每天买苹果。
 
-   3）You believe Nick.你相信尼克。
+   3）You believe **Nick**.你相信尼克。
 
-   4）She likes Nick. 她喜欢尼克。
+   4）She likes **Nick**. 她喜欢尼克。
 
-   5）She likes Music.她喜欢音乐。
+   5）She likes **Music**.她喜欢音乐。
 
-   6）I bought a book yesterday. 昨天我买了一本书。
+   6）I bought **a book** yesterday. 昨天我买了一本书。
 
-   7）I borrowed a pen from him.我从他那里借了一支钢笔。
+   7）I borrowed **a pen** from him.我从他那里借了一支钢笔。
 
-   8）I found my key.我找到我的钥匙了。
+   8）I found **my key**.我找到我的钥匙了。
 
 2. **人称代词的宾格作宾语： me（我）you（你）her（她）him（他）it（它）them（他们/她们/它们） us （我们）**
 
