--- a/docs/001-记录/资源链接.md
+++ b/docs/001-记录/资源链接.md
@@ -2,7 +2,7 @@
 1. [google developers](https://developers.google.com/web/updates)
 2. [google developers](https://developers.google.com/web/fundamentals/performance/rendering/avoid-large-complex-layouts-and-layout-thrashing?utm_source=devtools#avoid-forced-synchronous-layouts)
 3. [stackoverflow](https://stackoverflow.com/users/17157991/liuchengyuan)
-
+4. [极客时间](https://time.geekbang.org/learning/path-detail/2?utm_source=infoq_web&utm_medium=menu&utm_term=infoqwebmenu)
 # css
 
 1. [bootstrap](https://www.bootcss.com/)
