--- a/docs/018-基础学科/理财/1.md
+++ b/docs/018-基础学科/理财/1.md
@@ -1,4 +1,4 @@
-# 什么是通货膨胀？
+# 通货膨胀
 ### 定义
 流通中的**货币数量超过经济实际需要**而引起的货币贬值和物价水平全面而持续的上涨--用更通俗的语言来说就是：在一段给定的时间内，给定经济体中的物价水平普遍持续增长，从而造成货币购买力的持续下降。
 ### 原因
@@ -8,7 +8,7 @@
 
 ### 衡量通货膨胀的CPI
 
-# 如何克服通货膨胀？
+### 如何克服通货膨胀？
 - https://zhuanlan.zhihu.com/p/346576956
 
 ### **72÷通货膨胀率=货币贬值一半所需的年数**
@@ -24,6 +24,15 @@
 - 增强赚钱的能力。
 - 你能为这个世界带来什么？能帮助别人解决什么问题？
 
+# 要不要买房
+### 租售比
+### 人口变化
+
+### 平局工资增长
+
+### 供需变化
+
+### 期房、现房、二手房
 
 
 # 
@@ -47,4 +56,14 @@ function calc(area, oldPrice, newPrice, year) {
   var totalYear = 72 / 3 
   console.log(realTotalPrice, (realTotalPrice - expectTotalPrice) * 2)
 }
+
+(function total() {
+  var ratio = 0.98
+  var sum = 40 * Math.pow(ratio, 30)
+  for (var i = 0; i < 30; i++) {
+    sum += 0.4 * 12 * Math.pow(ratio, 30 - i)
+  }
+  var total = 40 + 0.4 * 12 * 30
+  console.log(sum, total, total - sum)
+})()
 ```
