--- a/docs/018-基础学科/英语学习/语法/001-句子成分与基本句型.md
+++ b/docs/018-基础学科/英语学习/语法/001-句子成分与基本句型.md
@@ -226,14 +226,18 @@ are是系动词，Students是名词作表语。所以状态型谓语就是“are
 可以做表语的有：
 
 - **名词**
+  - I am a student.
 - **形容词**
+  - the clothes are very old.
 - **介词短语**
+  - the girl is in the room.
 - **名词所有格**
 - **动词不定式**
   - My work is to clean the room every day.
   - His dream is to be a doctor.
 - **动名词**
 - **代词**
+  - *This watch is mine.*
 - **数词**
 - **分词**
 - **副词**
