--- a/docs/018-基础学科/其他/认知觉醒.md
+++ b/docs/018-基础学科/其他/认知觉醒.md
@@ -216,3 +216,82 @@
 
 
 
+### 人生是一场消除模糊的比赛
+
+机器人与人最大的区别是什么？
+
+- 机器人没有潜意识，一旦断电就会停止工作。
+- 人就算是晕阙，失去了意识，但心跳、呼吸并不会停止，因为它们收潜意识控制。
+
+
+
+意识与潜意识
+
+- 潜意识和意识分工明确， 它们有各自的特点。
+- 潜意识是模糊的。
+
+ 
+
+>  学习知识，消除认知模糊。
+
+
+
+**学习知识的目的是消除模糊， 二获取知识的方法也是消除模糊， 目的和方法统一。**
+
+
+
+**提升思考能力的方法是正是不断明确核心困难和心得感悟，并专注于此。**
+
+
+
+学习的重点——认知模糊的知识点。
+
+
+
+
+
+### 情绪模糊带来的烦恼
+
+>  受苦比解决问题来得容易， 承受不幸比享受幸福来得简单。
+
+因为解决问题需要动脑， 享受幸福也需要动脑和平衡各种微妙的关系，而承受痛苦只要陷在那里不动就行。
+
+**多数人为了逃避真正的思考，愿意做任何事情。**
+
+
+
+然而回避痛苦并不会让痛苦消失，反而会使其转入潜意识，变成模糊的感觉。而当具体的事情一旦变得模糊，其边界就会无限扩大，原本并不困难的小事，也会在模糊的潜意识里变得难以解决。
+
+~~这种感觉的确遇到过很多次。有一次进行项目版本迭代的时候， 需要去改同事的代码， 改之前发现同事的代码写的很烂，第一反应就是逃避，不想去看哪些糟糕的代码，自己可能完成不了。拖到最后，硬着头皮去看代码，修改代码，其实发现也没有那么糟糕。事实证明， 逃避会将事实模糊， 并且将困难无限扩大。~~
+
+真正的困难总比想象的要小很多。逃避困难会让困难变得模糊并且无限放大， 而积极的面对困难会让困难清晰，恢复它本来的面目。
+
+
+
+> 任何痛苦的事情都不会主动消失， 哪怕再小的事情。
+
+要想不再受其困扰，唯一的办法就是正视它， 看清它，拆解它，化解它，不给它进入潜意识的机会， 不给它变模糊的机会。
+
+即使进入了潜意识也要想办法将它挖出来。所以当你感到心里有说不清、道不明的难受的感觉时，赶紧坐下来向自己提问。
+
+- 是什么让自己产生这种感觉？
+- 产生这种感觉的原因是什么？
+- 我能做什么？不能做什么？最坏的结果是什么？
+
+
+
+
+
+### 行动模糊
+
+行动力不足的原因是——选择模糊。
+
+> 选择模糊是什么？
+
+我们在面对众多的可能性时无法做出清晰、明确的选择。选择模糊就是一种不确定性。
+
+当我们没有足够清晰的指令或者目标时，就很容易选择享乐。
+
+
+
+我们应该花时间去思考，让目标更加清晰。
