--- a/docs/018-基础学科/英语学习/语法/001-句子成分与基本句型.md
+++ b/docs/018-基础学科/英语学习/语法/001-句子成分与基本句型.md
@@ -762,7 +762,7 @@ anything special 一些特别的事情。
 
 1. I work every day. 我每天都工作。
 
-   “Work”是不及物动词作谓语，“every\* *day”是时间状语。
+   “Work”是不及物动词作谓语，“every  day”是时间状语。
 
 2. I run every day.我每天跑步。
 
