--- a/docs/018-基础学科/英语学习/语法/003-代词.md
+++ b/docs/018-基础学科/英语学习/语法/003-代词.md
@@ -3,7 +3,7 @@
 **代词是为了避免重复而用来代替名词的词语。**英语代词可分为以下九类：
 
 - 人称代词
-- -物主代词
+- 物主代词
 - 反身代词
 - 相互代词
 - 指示代词
@@ -51,13 +51,13 @@
 
    It is cheap 它便宜。（主格作主语）
 
-   I likeher.我喜欢她。（宾格作宾语，不能说 I like she ）
+   I like her.我喜欢她。（宾格作宾语，不能说 I like she ）
 
-   I supportthem. 我支持他们。（宾格作宾语）
+   I support them. 我支持他们。（宾格作宾语）
 
    He teaches us English.他教我们英语。（宾格作宾语）
 
-   They believeme.他们/她们相信我。（宾格作宾语）
+   They believe me.他们/她们相信我。（宾格作宾语）
 
    
 
@@ -71,7 +71,7 @@
    
    **注意，两个或者两个以上的人称代词主格的单数作并列主语的时候顺序为：you,he(she) and I ，如果是复数，顺序是：we,you and they。**如：
    
-   He andI are both from Guangxi 我和他都是来自广西。
+   He and I are both from Guangxi 我和他都是来自广西。
    
    You and I like music.我和你喜欢音乐。
    
@@ -226,7 +226,7 @@ Their wine 她们/他们的红酒
 
    This house 这个房子
 
-   Thiscomputer这台电脑
+   This computer这台电脑
 
    This girl这个女孩
 
@@ -252,7 +252,7 @@ Their wine 她们/他们的红酒
 
    That houses错误（that不能修饰复数）
 
-   thisbook 这本书
+   this book 这本书
 
    that book 那本书
 
