--- a/docs/018-基础学科/英语学习/语法/004-形容词.md
+++ b/docs/018-基础学科/英语学习/语法/004-形容词.md
@@ -48,7 +48,7 @@ hard-working努力的，勤勉的
 
 ### 1、作表语
 
-大部分的形容词都可以作表语。形容词作表语可以直接构成一个句型：主语 be（系动词）+形容词（表语）
+大部分的形容词都可以作表语。形容词作表语可以直接构成一个句型：**主语 be（系动词）+形容词（表语）**
 
 I am happy/busy. 我快乐/我忙。（形容词happy/busy作表语）
 
@@ -72,7 +72,7 @@ The film is very boring.这部电影很无聊。
 
 A good student must be diligent.一个好学生一定是勤奋的。
 
-She is alwayshappy.她总是很开心。
+She is always happy.她总是很开心。
 
 They are very hard-working.他们很努力。
 
@@ -128,7 +128,7 @@ We keep the room clean.我们保持教室干净。
 
 We keep the classroom quiet.我们保持教室安静。
 
-We must keep the classroomclean.我们必须保持教室清洁。
+We must keep the classroom clean.我们必须保持教室清洁。
 
 All the facts proved him right.所有的事实都证明了他是对的。
 
@@ -286,7 +286,7 @@ younger brother 弟弟 younger sister 妹妹
 
 I have a better way 我有一个更好的办法（形容词比较级作前置定语）
 
-She is mybest friend 她是我最好的朋友（形容词最高级作前置定语）
+She is my best friend 她是我最好的朋友（形容词最高级作前置定语）
 
 She made me the happiest man in the world她让我成为世界上最幸福的男人（形容词最高级作前置定语）
 
