--- a/docs/001-记录/随笔.md
+++ b/docs/001-记录/随笔.md
@@ -44,3 +44,6 @@
 # npm 包安装时打印出来的信息是怎么实现的？
 - 只要在npm包加上postinstall即可实现
 - 参考https://github.com/zloirock/core-js/blob/master/packages/core-js/postinstall.js
+
+# 软件LTS版本
+LTS是Long Term Support的简称，即长期支持。
