--- a/docs/002-前端/006-框架/react/001-react源码/资料.md
+++ b/docs/002-前端/006-框架/react/001-react源码/资料.md
@@ -1,1 +1,37 @@
-https://xiaochen1024.com/courseware/60b1b2f6cf10a4003b634718
+- https://xiaochen1024.com/courseware/60b1b2f6cf10a4003b634718
+- https://react.iamkasong.com/preparation/idea.html#react%E7%90%86%E5%BF%B5
+
+# 软件设计
+软件的服务理念 -> 软件的架构 -> 软件的实现
+
+
+# React理念
+构建快速响应的大型 Web 应用程序。
+
+
+# 影响web应用快速响应的因素
+1. CPU的瓶颈
+主流浏览器刷新频率为60Hz，即每（1000ms / 60Hz）16.6ms浏览器刷新一次。
+我们知道，JS可以操作DOM，GUI渲染线程与JS线程是互斥的。所以JS脚本执行和浏览器布局、绘制不能同时执行。
+在每16.6ms时间内，需要完成如下工作：
+```txt
+JS脚本执行 -----  样式布局 ----- 样式绘制
+```
+当JS执行时间过长，超出了16.6ms，这次刷新就没有时间执行样式布局和样式绘制了。
+当JS脚本执行时间过长，页面掉帧，造成卡顿。
+
+可以考虑：
+一个大任务 --->  多个小任务
+同步不可中断 --->  异步可中断
+
+实现方式是： 时间切片
+
+
+
+2. IO的瓶颈
+
+
+# React15到React16
+## React15
+由于递归执行更新，所以更新一旦开始，中途就无法中断。当层级很深时，递归更新时间超过了16ms，用户交互就会卡顿。
+
